owncloud/13-owncloud-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
    type: statefulset
spec:
  serviceName: "owncloud"
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
      type: pod
  template:
    metadata:
      labels:
        app: owncloud
        type: pod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - owncloud
      containers:
      - name: owncloud
        image: owncloud/server:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /mnt/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
