owncloud/08-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: owncloud
  labels:
    app: redis
    type: service
spec:
  selector:
    app: redis
    type: pod
  ports:
    - port: 6379
      name: redis
