owncloud/12-owncloud-service.yml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
    type: service
spec:
  selector:
    app: owncloud
    type: pod
  ports:
    - port: 8081
      name: http
