owncloud/14-owncloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: owncloud
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
      - "owncloud.domain.tld"
    secretName: "owncloud-tls"
  rules:
  - host: "owncloud.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "owncloud"
            port:
              number: 8080
